Creacion de app
Modulo para principiante, avanzado, intermedio y home

Creacion de estructura blocky principiante

--- a/Cliente/cliente-app/src/app/login/login.component.scss
+++ b/Cliente/cliente-app/src/app/login/login.component.scss
@@ -1,5 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+mat-toolbar {
+  position: sticky;
+  position: -webkit-sticky; /* For macOS/iOS Safari */
+  top: 0; /* Sets the sticky toolbar to be on top */
+  z-index: 2;
+}
+
 .login-page {
   width: 360px;
   padding: 8% 0 0;
