--- a/Cliente/cliente-app/src/app/app.component.html
+++ b/Cliente/cliente-app/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-<app-login-app></app-login-app>
+<div class="main-container" mat-app-background>
+  <router-outlet></router-outlet>
+</div>
