--- a/Cliente/cliente-app/src/app/principiante/principiante.component.scss
+++ b/Cliente/cliente-app/src/app/principiante/principiante.component.scss
@@ -8,4 +8,4 @@ mat-toolbar {
   .container {
     height: 100%;
   }
-  
+  .k-icon.k-i-loading { font-size: 80% ; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
