--- a/Cliente/cliente-app/src/app/login/login.component.html
+++ b/Cliente/cliente-app/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-page">
   <div class="form">
     <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
+    <input type="text" #username name="username" placeholder="Username">
+    <input type="password" #password name="password" placeholder="Password">
+    <button type="submit" (click)="logIn(username.value, password.value, $event)" id="login-button">Login</button>
     </form>
   </div>
 </div>
